--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,8 +1,20 @@
-<!DOCTYPE html> <html>
+<!DOCTYPE html> 
+{% load static %}
+<html>
+ 
 <head> <title>Rango</title> </head>
-<body> 
-         <strong>{{ boldmessage }}</strong><br /> 
-        </div> <div> <a href="/rango/">Index</a><br />
+<body>  <h1>Rango says...</h1>
+    <div> here is the about page.<br />
+         <strong>This tutorial has been put together by TingYu</strong><br /> 
+        </div> 
+        <div> <a href="/rango/">Index</a><br />
+            <img src="{% static 'images/rango.jpg' %}"
+                alt="Picture of Rango"/>
+            
+         </div>
+         <div>
+            <img src="{{MEDIA_URL}}cat.jpg"
+            alt="Picture of a cat.?"/>
          </div>
          </body>
 </html>
