--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -4,17 +4,14 @@
  
 <head> <title>Rango</title> </head>
 <body>  <h1>Rango says...</h1>
-    <div> here is the about page.<br />
-         <strong>This tutorial has been put together by TingYu</strong><br /> 
-        </div> 
-        <div> <a href="/rango/">Index</a><br />
-            <img src="{% static 'images/rango.jpg' %}"
-                alt="Picture of Rango"/>
-            
-         </div>
-         <div>
-            <img src="{{MEDIA_URL}}cat.jpg"
-            alt="Picture of a cat.?"/>
-         </div>
+    <h2> here is the about page.<br /></h2>
+  
+    <div> 
+        <strong>This tutorial has been put together by TingYu</strong><br /> 
+
+        <a href="/rango/">Index</a><br />
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+        <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat.?" />
+    </div>
          </body>
 </html>
