--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html> 
+{% extends 'rango/base.html' %}
 {% load static %}
-<html>
- 
-<head> <title>Rango</title> </head>
-<body>  <h1>Rango says...</h1>
-    <h2> here is the about page.<br /></h2>
-  
-    <div> 
-        <strong>This tutorial has been put together by TingYu</strong><br /> 
 
-        <a href="/rango/">Index</a><br />
-        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-        <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat.?" />
-    </div>
-         </body>
-</html>
+{% block title_block %}
+    About Rango
+{% endblock %}
+
+{% block body_block %}
+<h1>Rango says...</h1>
+<div>
+    here is the about page. <br />
+    <strong>This tutorial has been put together by TingYu</strong><br />
+</div>
+<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
+{% endblock %}
